fix: ie11 vertical align

--- a/src/style/b-container/mobile.scss
+++ b/src/style/b-container/mobile.scss
@@ -1,4 +1,5 @@
 /* 320 + */
 .b-container {
     padding: 0 20px;
+    width: 100%;
 }
