--- a/src/style/b-main-page/mobile.scss
+++ b/src/style/b-main-page/mobile.scss
@@ -3,6 +3,7 @@
 
     &__content {
         min-height: 100vh;
+        min-width: 100%; // Note: for ie11 fix flex
         display: flex;
         flex-direction: column;
         justify-content: center;
